results/models/glm-5.1-Tools/cot/glm-5.1-Tools_2_0.txt
[Tool call: execute_python({"code": "\n# Let me verify the algorithm logic with a small example\n# Simple graph: triangle 0-1-2)]
[Tool result: Algorithm verification passed]

[Tool call: execute_python({"code": "\n# Let me think about the greedy matching more carefully\n# and test with a specific exam)]
[Tool result: Greedy matching analysis done]

[Tool call: execute_python({"code": "\n# Let me also think about the Hierholzer's algorithm implementation\n# We need to handle)]
[Tool result: Implementation plan ready]

[Tool call: execute_python({"code": "\ncode = r'''using System;\nusing System.Collections.Generic;\nusing System.IO;\nusing Sys)]
[Tool result: using System;
using System.Collections.Generic;
using System.IO;
using System.Text;

class ChinesePostman
{
    static int N, M;
    static List<int[]>[] adj;        // adj[u] = list of {v, edgeId}
    static int[][] edgeData;         // edgeData[i] = {u, v, w}
    static int totalEdges;           // original edges + duplicated edges
    static bool[] edgeUsed;

    static void Main()
    {
        ReadInput();
        var eulerAdj = BuildEulerianGraph();
        var route = FindEulerCircuit(eul]

[Tool call: execute_python({"code": "\n# Let me verify the algorithm with a simple test case\n# Triangle: 0-1(w1), 1-2(w1), 2-0)]
[Tool result: Self-loop analysis: handled correctly
Multi-edge analysis: handled correctly]

[Tool call: execute_python({"code": "\n# I need to fix a potential issue with the Hierholzer's algorithm:\n# When we find an un)]
[Tool result: Need to rewrite Hierholzer's with global pointers for efficiency]

[Tool call: execute_python({"code": "\n# Let me also think about memory optimization for epic scale\n# \n# Current data structu)]
[Tool result: STDERR:
  File "C:\Users\Ash\AppData\Local\Temp\llmbench_code_exec\exec_23a1c600.py", line 39
    // int maxEdges = M + K * N; // generous upper bound for duplicated edges
    ^^
SyntaxError: invalid syntax

[exit code 1]]

[Tool call: execute_python({"code": "\n# Let me now write the final optimized C# code with all the fixes\n\ncode = r'''using Sy)]
[Tool result: using System;
using System.Collections.Generic;
using System.IO;
using System.Text;

class ChinesePostman
{
    static int N, M;
    static List<int>[] adjV;       // adjV[u] = list of neighbor node IDs
    static List<int>[] adjE;       // adjE[u] = list of edge IDs (parallel to adjV)
    static int[] edgeW;            // edgeW[edgeId] = weight
    static int[] edgeU, edgeV;     // endpoints of each edge (for duplication)
    static int totalEdges;
    static bool[] edgeUsed;
    static int max]

[Tool call: execute_python({"code": "\n# Let me verify the Hierholzer's algorithm correctness more carefully\n# with the global)]
[Tool result: Hierholzer's algorithm verification: PASSED]

[Tool call: execute_python({"code": "\n# Now let me think about edge cases and potential issues:\n\n# 1. Self-loops: edge (u, u)]
[Tool result: Need to implement efficient matching for large K]

[Tool call: execute_python({"code": "\n# Let me now write the final, complete C# solution with all optimizations\n\ncode = r''')]
[Tool result: using System;
using System.Collections.Generic;
using System.IO;
using System.Text;

class ChinesePostman
{
    static int N, M;
    static List<int>[] adjV;
    static List<int>[] adjE;
    static int[] edgeW;
    static int[] edgeU, edgeV;
    static int totalEdges;
    static bool[] edgeUsed;
    static int maxEdgeCap;

    static void Main()
    {
        ReadInput();
        if (!IsConnected()) { Console.WriteLine("1 0"); return; }
        MakeEulerian();
        var route = FindEulerCircui]

[Tool call: execute_python({"code": "\n# Let me do a final careful review of the algorithm\n\n# Issue 1: In GreedyNearestMatch,)]
[Tool result: All issues reviewed. Code looks correct.]

[Tool call: execute_python({"code": "\n# Let me think about one more optimization for the epic scale:\n# The Hierholzer's algor)]
[Tool result: GreedyNearestMatch correctness verified]

[Tool call: execute_python({"code": "\n# Let me also consider the case where the greedy nearest-neighbor approach\n# might leav)]
[Tool result: Edge cases verified]

[Tool call: execute_python({"code": "\n# Let me also think about potential performance issues with very large graphs\n# and the)]
[Tool result: Performance analysis complete. Code is ready.]

[Tool call: execute_python({"code": "\n# Let me think about whether I need a more sophisticated output method\n# for very large)]
[Tool result: static void OutputRoute(int[] route)
    {
        using var stream = Console.OpenStandardOutput();
        using var writer = new StreamWriter(stream, Encoding.ASCII, 65536);
        writer.Write(route.Length);
        for (int i = 0; i < route.Length; i++)
        {
            writer.Write(' ');
            writer.Write(route[i]);
        }
        writer.WriteLine();
    }
This is more efficient for large outputs]

[Tool call: execute_python({"code": "\n# Wait, there's an issue with the StreamWriter approach for very large routes.\n# Each w)]
[Tool result: using System;
using System.Collections.Generic;
using System.IO;
using System.Text;

class ChinesePostman
{
    static int N, M;
    static List<int>[] adjV;
    static List<int>[] adjE;
    static int[] edgeW;
    static int[] edgeU, edgeV;
    static int totalEdges;
    static bool[] edgeUsed;
    static int maxEdgeCap;

    static void Main()
    {
        ReadInput();
        if (!IsConnected()) { Console.WriteLine("1 0"); return; }
        MakeEulerian();
        var route = FindEulerCircui]

[Tool call: execute_python({"code": "\n# Let me verify: for the graph where node 0 is isolated but the rest is connected,\n# th)]
[Tool result: All edge cases verified. Solution is ready.]